# Emilia-MFA-Preprocess

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
mfa_outputs/temp/en/ZH_B00066_S00003/: ZH_B00066_S00003_W000000.lab
mfa_outputs/temp/en/ZH_B00066_S00013/: ZH_B00066_S00013_W000000.lab  ZH_B00066_S00013_W000001.lab  ZH_B00066_S00013_W000002.lab  ZH_B00066_S00013_W000003.lab  ZH_B00066_S00013_W000004.lab  ZH_B00066_S00013_W000005.lab  ZH_B00066_S00013_W000006.lab  ZH_B00066_S00013_W000007.lab  ZH_B00066_S00013_W000008.lab  ZH_B00066_S00013_W000009.lab  ZH_B00066_S00013_W000010.lab  ZH_B00066_S00013_W000011.lab  ZH_B00066_S00013_W000012.lab  ZH_B00066_S00013_W000013.lab  ZH_B00066_S00013_W000014.lab  ZH_B00066_S00013_W000015.lab  ZH_B00066_S00013_W000016.lab  ZH_B00066_S00013_W000017.lab  ZH_B00066_S00013_W000018.lab  ZH_B00066_S00013_W000019.lab  ZH_B00066_S00013_W000020.lab  ZH_B00066_S00013_W000021.lab  ZH_B00066_S00013_W000022.lab  ZH_B00066_S00013_W000023.lab  ZH_B00066_S00013_W000024.lab  ZH_B00066_S00013_W000025.lab  ZH_B00066_S00013_W000026.lab  ZH_B00066_S00013_W000027.lab  ZH_B00066_S00013_W000028.lab  ZH_B00066_S00013_W000029.lab  ZH_B00066_S00013_W000030.lab  ZH_B00066_S00013_W000031.lab  ZH_B00066_S00013_W000032.lab  ZH_B00066_S00013_W000033.lab  ZH_B00066_S00013_W000034.lab  ZH_B00066_S00013_W000035.lab  ZH_B00066_S00013_W000036.lab  ZH_B00066_S00013_W000037.lab  ZH_B00066_S00013_W000038.lab  ZH_B00066_S00013_W000039.lab  (+16 more)
src/Audio_pretrain/: download.py
src/Audio_pretrain/timestamping/: MFA.py  emilia_unpackage.py
(+1943 files in other folders)
